assets/parts/_article.scss
/* ... */
.headline, .post-meta-index {
    font-family: $void-font-sans!important;
}

.toc-mask {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: $bgColor;
    z-index: 3;
    opacity: 0.85;
    transition: $animationTime $animationTimingFunc;
    .theme-dark & {
        background: $td-bgColor;
    }
    display: none;
    @media screen and (max-width: 1199.5px) {
        .sidebar-show & {
            display: block;
        }   
    }
}
.TOC {
    position: fixed;
    top: 0;
    bottom: 0;
    z-index: 3;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
    width: 280px;
    right: -280px;
    @include sidebar;
    padding: 1rem;
    padding-right: 0;
    padding-top: 60px;
    &::-webkit-scrollbar {
        display: none;
    }
    &::before {
        content: "Contents";
        position: absolute;
        left: 0;
        top: 0;
        line-height: 60px;
        height: 60px;
        width: 100%;
        font-size: 20px;
        font-weight: 600;
        text-transform: uppercase;
        text-align: center;
        color: $td-textColor;
        box-sizing: border-box;
    }
    bottom: 0;
    transition: $animationTime $animationTimingFunc right;
    .theme-dark &::-webkit-scrollbar{
        background: none;
    }
    * {
        color: $td-textColor;
    }
    .toc-list {
        position: relative;
        .toc-list {
            position: unset;
        }
    }
    li {
        a {
            white-space: nowrap;
            text-overflow: ellipsis;
            overflow: hidden;
            display: block;
            width: 100%;
            &:hover, &.is-active-link {
                color: #54bc4b;
            }
        }
    }
    .is-active-link::before {
        content: "";
        background-color: rgba(0, 0, 0, 0.3);
        display: block;
        height: 2.1rem;
        left: -1rem;
        position: absolute;
        width: calc(100% + 1rem);
        border-left: 2px solid #54BC4B;
        z-index: -1;
        box-sizing: border-box;
    }
    @media screen and (min-width: 1199.5px){
        .toc-link:hover::before {
            content: "";
            background-color: rgba(0, 0, 0, 0.3);
            display: block;
            height: 2.1rem;
            left: -1rem;
            position: absolute;
            width: calc(100% + 1rem);
            border-left: 2px solid #54BC4B;
            z-index: -1;
            box-sizing: border-box;
        }
    }
    .sidebar-show & {
        right: 0;
    }
}

@media screen and (max-width: 1199.5px) {
    div.contents-wrap {
        transition: $animationTime $animationTimingFunc opacity;
    }
}

@media screen and (min-width: 1199.5px) {
    div.contents-wrap,
    main>.lazy-wrap,
    #comments,
    body>footer {
        transition: $animationTime $animationTimingFunc transform;
    }
    body>header{
        transition: $animationTime $animationTimingFunc all;
    }
    .sidebar-show{
        div.contents-wrap,
        main>.lazy-wrap,
        #comments,
        >footer{
            transform: translateX(-135px);
            .banner-title {
                padding-left: 150px;
                padding-right: 150px;
            }
        }
        >header{
            padding-right: 270px;
        }
    } 
}

#toggle-toc {
    display: none;
}

.sidebar-show #ctrler-panel {
    #toggle-toc {
        a {
            transform: rotate(180deg);
            animation-fill-mode: forwards;
        }
    }
}

.social-button {
    padding: 1.125rem 0;
    border-top: 1px solid $borderColor;
    border-bottom: 1px solid $borderColor;
    .theme-dark & {
        border-color: $td-borderColor;
    }
    a.social-button-icon {
        border: none !important;
        font-size: 1.5rem;
        display: inline-flex;
        vertical-align: bottom;
        i {
            color: $fadeColor;
            .theme-dark &{
                color: $td-textColor-dark;
            }
            &:hover {
                color: #ff5268
            }
        }
    }
}
#social {
    .post-like {
        margin: 0 auto;
        display: block;
        font-weight: bold !important;
        color: $fadeColor !important;
        .theme-dark & {
            color: $td-textColor !important;
        }
        &:hover,
        &.done {
            color: white !important;
            border: 2px solid $darkColor !important;
        }
    }
}
.littlefoot {
    --button-background-color: rgba(110, 110, 110, 0.2);
    --button-active-background-color: #6e6e6e;
    --button-text-color: #fff;
    --button-active-text-color: #fff;
    --button-border: none;
    --button-font-size: 1rem;
    --button-font-weight: 400;
    --button-border-radius: 0.3em;
    --button-margin: 0 0.1em 0 0.2em;
    --button-padding: 0.35em;
    --button-height: 1rem;
    --button-transition: background-color 0.25s ease;
    --popover-background-color: #fafafa;
    --popover-text-color: #333;
    --popover-border: 1px solid #c3c3c3;
    --popover-border-radius: 0.5rem;
    --popover-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
    --popover-width: 22em;
    --popover-max-width: 90%;
    --popover-max-height: 15em;
    --popover-horizontal-padding: 1.3em;
    --popover-vertical-padding: 1.1em;
    --popover-z-index: 10;
    display: inline-block;
    position: relative;
    text-indent: 0;
    z-index: 1;
    transform: translateY(-0.3rem);

    .theme-dark & {
        --button-background-color: rgba(110, 110, 110, 0.45);
        --button-active-background-color: #6e6e6e;
        --button-text-color: #fff;
        --button-active-text-color: #fff;
        --popover-background-color: #{$td-borderColor};
        --popover-text-color: #{$td-textColor};
        --popover-border: 1px solid #{$td-borderColor};
        --popover-scroll-indicator-color: #{$td-textColor-dark};
    }
}

.littlefoot.littlefoot--active {
    z-index: 3000;
}
/* ... */

